--- a/seção 1/index.html
+++ b/seção 1/index.html
@@ -18,22 +18,22 @@
 </head>
 
 <body>
-
-	<table class="table table-hover">
-		<tr>
-			<th>#</th>
-			<th>Cursos</th>
-		</tr>
-		<tr>
-			<th>1</th>
-			<th>bootstrap</th>
-		</tr>
-		<tr>
-			<th>2</th>
-			<th>HTML</th>
-		</tr>
-	</table>
-
+	<div class="container-fluid">
+		<table class="table table-hover">
+			<tr>
+				<th>#</th>
+				<th>Cursos</th>
+			</tr>
+			<tr>
+				<th>1</th>
+				<th>bootstrap</th>
+			</tr>
+			<tr>
+				<th>2</th>
+				<th>HTML</th>
+			</tr>
+		</table>
+	</div>
 </body>
 
 </html>
