--- a/seção 1/index.html
+++ b/seção 1/index.html
@@ -8,7 +8,7 @@
 	<link href="public/css/bootstrap.min.css" rel="stylesheet">
 	<style>
 		p {
-			padding: 50px
+			padding: 50px;
 		}
 	</style>
 
@@ -18,21 +18,27 @@
 </head>
 
 <body>
-	<div class="container-fluid">
-		<table class="table table-hover">
-			<tr>
-				<th>#</th>
-				<th>Cursos</th>
-			</tr>
-			<tr>
-				<th>1</th>
-				<th>bootstrap</th>
-			</tr>
-			<tr>
-				<th>2</th>
-				<th>HTML</th>
-			</tr>
-		</table>
+	<div class="container-fluid" style="background-color: grey; padding: 100px 0;">
+		<div class="row">
+			<div class="col-12" style="background-color: magenta;">
+				MENU
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-xl-2 col-sm-12" style="background-color: red;">
+				<p>Olá mundo</p>
+			</div>
+			<div class="col-xl-8" style="background-color: blue;">
+				<p>Mundo 2</p>
+			</div>
+			<div class="col-xl-2 col-sm-12" style="background-color: green;">
+				<p>mundo 3</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-xl-6 col-sm-12" style="background-color: black;">Rodapé</div>
+			<div class="col-xl-6 col-sm-12" style="background-color: yellow;">Rodapé 2</div>
+		</div>
 	</div>
 </body>
 
