--- a/seção 03/index.html
+++ b/seção 03/index.html
@@ -13,13 +13,11 @@
 </head>
 
 <body>
-    <h1>Título</h1>
-    <h2>Título</h2>
-    <h3>Título</h3>
-    <h4>Título</h4>
-    <h5>Título</h5>
-    <h6>Título</h6>
-    <p>Parágrafo</p>
+    <h1>Título 1</h1>
+    <h1 class="display-1">Título 2</h1>
+    <h1 class="display-2">Título 2</h1>
+    <h1 class="display-3">Título 2</h1>
+    <h1 class="display-4">Título 2</h1>
 
 
     <!-- Optional JavaScript -->
