--- a/seção 03/index.html
+++ b/seção 03/index.html
@@ -14,10 +14,56 @@
 
 <body>
     <h1>Título 1</h1>
-    <h1 class="display-1">Título 2</h1>
-    <h1 class="display-2">Título 2</h1>
-    <h1 class="display-3">Título 2</h1>
-    <h1 class="display-4">Título 2</h1>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Non rerum sit assumenda eveniet quo cum ab ad dolores
+        ipsum, doloremque illum illo, in molestiae! Odit perferendis, rerum cupiditate magni atque iusto quaerat vel
+        quos
+        nulla ad nihil velit laudantium minima earum dolore eum beatae doloribus debitis tempore eos? Molestias eum nemo
+        veritatis consectetur. Mollitia amet velit, recusandae tempore officiis facere alias? Odit provident saepe id!
+        Aperiam in nostrum sequi nesciunt quibusdam, expedita voluptas quos voluptates dolores enim corrupti, nemo
+        excepturi, aliquid repudiandae commodi iure similique! Minima eaque provident cumque natus, unde, error
+        asperiores
+        velit exercitationem doloremque atque amet ut, quisquam accusamus? Quasi doloremque eum blanditiis cum.
+        Nesciunt,
+        impedit sint molestiae ut dignissimos dolores enim laborum, consequuntur dolore nihil ratione cupiditate, magni
+        saepe unde error esse distinctio. Placeat fuga optio consequuntur culpa tenetur repellendus iste nam debitis.
+        Est
+        natus, ea dignissimos saepe temporibus doloremque officiis quasi omnis velit nesciunt quibusdam amet.
+    </p>
+
+    <p class="lead">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Non rerum sit assumenda eveniet quo cum ab ad dolores
+        ipsum, doloremque illum illo, in molestiae! Odit perferendis, rerum cupiditate magni atque iusto quaerat vel
+        quos
+        nulla ad nihil velit laudantium minima earum dolore eum beatae doloribus debitis tempore eos? Molestias eum nemo
+        veritatis consectetur. Mollitia amet velit, recusandae tempore officiis facere alias? Odit provident saepe id!
+        Aperiam in nostrum sequi nesciunt quibusdam, expedita voluptas quos voluptates dolores enim corrupti, nemo
+        excepturi, aliquid repudiandae commodi iure similique! Minima eaque provident cumque natus, unde, error
+        asperiores
+        velit exercitationem doloremque atque amet ut, quisquam accusamus? Quasi doloremque eum blanditiis cum.
+        Nesciunt,
+        impedit sint molestiae ut dignissimos dolores enim laborum, consequuntur dolore nihil ratione cupiditate, magni
+        saepe unde error esse distinctio. Placeat fuga optio consequuntur culpa tenetur repellendus iste nam debitis.
+        Est
+        natus, ea dignissimos saepe temporibus doloremque officiis quasi omnis velit nesciunt quibusdam amet.
+    </p>
+
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Non rerum sit assumenda eveniet quo cum ab ad dolores
+        ipsum, doloremque illum illo, in molestiae! Odit perferendis, rerum cupiditate magni atque iusto quaerat vel
+        quos
+        nulla ad nihil velit laudantium minima earum dolore eum beatae doloribus debitis tempore eos? Molestias eum nemo
+        veritatis consectetur. Mollitia amet velit, recusandae tempore officiis facere alias? Odit provident saepe id!
+        Aperiam in nostrum sequi nesciunt quibusdam, expedita voluptas quos voluptates dolores enim corrupti, nemo
+        excepturi, aliquid repudiandae commodi iure similique! Minima eaque provident cumque natus, unde, error
+        asperiores
+        velit exercitationem doloremque atque amet ut, quisquam accusamus? Quasi doloremque eum blanditiis cum.
+        Nesciunt,
+        impedit sint molestiae ut dignissimos dolores enim laborum, consequuntur dolore nihil ratione cupiditate, magni
+        saepe unde error esse distinctio. Placeat fuga optio consequuntur culpa tenetur repellendus iste nam debitis.
+        Est
+        natus, ea dignissimos saepe temporibus doloremque officiis quasi omnis velit nesciunt quibusdam amet.
+    </p>
 
 
     <!-- Optional JavaScript -->
